[project]
name = "clt-queued-run-coordinator"
version = "0.1.0"
description = "Dagster custom run coordinator that auto-injects code-location-based tags before queueing (CLTQueuedRunCoordinator)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Jungsub Shin", email = "supsup5642@gmail.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
  "dagster>=1.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"