[project]
name = "dagster-clt-queued-run-coordinator"
version = "0.1.0"
description = "Code Location Tagging (CLT) QueuedRunCoordinator – a custom Dagster run coordinator that automatically injects code-location tags before queuing."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Jungsub Shin", email = "supsup5642@gmail.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "dagster>=1.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["clt_queued_run_coordinator*"]